# NPP_HexEdit

./: .clangd  .gitignore  CHANGELOG.md  DEVELOPER.md  LOCALIZATION.md  README.md  ReleaseNotes.md
.github/workflows/: macos-release.yml
docs/: test-status.md
docs/test-status/: state.json
macos/: .clangd  CMakeLists.txt  README.md  TESTING.md
macos/design/: options-dialog-reference.md
macos/fuzz/: README.md  fuzz_decodeRectPayload.cpp  fuzz_extractRectBytes.cpp  fuzz_makeRectSelection.cpp  fuzz_parseHexClipboardText.cpp  fuzz_parseRectClipboardText.cpp  fuzz_parseSearchPattern.cpp  fuzz_resolveGotoOffset.cpp  fuzz_stripHexDumpAddressAndAscii.cpp
macos/resources/: Localizable.ar.strings  Localizable.de.strings  Localizable.en-GB.strings  Localizable.en-US.strings  Localizable.en.strings  Localizable.es-ES.strings  Localizable.es-MX.strings  Localizable.es.strings  Localizable.fr.strings  Localizable.he.strings  Localizable.it.strings  Localizable.pl.strings  Localizable.ru.strings  Localizable.uk.strings  Localizable.zh-Hans.strings
macos/scripts/: extract-changelog-section.sh  generate-test-fixture.py  install-host-plugin.sh  install-test-codesign-cert.sh  package.sh  pre-commit-tests.sh  test-ui.sh  update-test-dashboard.py  vm-bootstrap.sh  vm-test.sh
macos/src/: HexEditor.mm
macos/src/core/: HexCore.cpp  HexCore.h
macos/tests/: HexCoreTests.cpp  HexPluginSmokeTests.cpp  HexPluginSmokeTests.mm
macos/ui-tests-xcode/: README.md  project.yml  run-tests.sh  summarize-results.py  update-dashboard.py
macos/ui-tests-xcode/TestRunner/: Info.plist
macos/ui-tests-xcode/Tests/: HexEditorUITests.swift
